--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": ">=7.1.5",
-    "ext-phalcon": "^3.2"
+    "ext-phalcon": ">=2.0.4 <3.9"
   },
   "require-dev": {
     "phalcon/incubator": "^3.2"
